# multi-agent-runtime

./: .dockerignore  .gitignore  README.md  alembic.ini  dev.db  docker-compose.nginx.yml  docker-compose.test.yml  docker-compose.yml  nginx.conf  pyproject.toml
admin-ui/: next.config.ts  package-lock.json
admin-ui/src/: middleware.ts
alembic/: env.py
alembic/versions/: 004_add_auth_tables.py  005_add_message_type_to_session_messages.py  006_add_chat_turns.py  007_add_tool_category.py  20240708_000001_init.py  20260105_000001_add_system_prompts.py  20260105_000002_extend_agent_instances.py
docker/: admin-api.Dockerfile  admin-ui.Dockerfile  gateway.Dockerfile
docs/: 01-current-sgr-agent-core-sgr-memory-agent-v2.md  01-current-sgr-agent-logic.md  02-target-architecture-variant-b-v2.md  02-target-architecture-variant-b.md  03-implementation-plan-variant-b-v2.md  03-implementation-plan-variant-b.md  04-migration-map-sgr-to-variant-b.md  05-llm-policy.md  05-runtime-build-roadmap.md  memory_agent_system_prompt.txt  migration_inventory.md
docs/ai/: plan-auth-chat-memory.md
scripts/: __init__.py  backfill_chat_turns.py  db.py  run_admin.py  run_tests_postgres.sh  seed_catalog.py
scripts/db/: deploy.sh  export_data.sh  (+3 more)
tests/: conftest.py  conftest_postgres.py  test_agent_directory_router.py  test_chat_memory_service.py  test_compileall.py  test_gateway_routes.py  test_instance_pool.py  test_llm_policy_application.py  test_persistence_repositories.py  test_rules_engine.py  test_session_service.py  test_template_service.py  test_tool_runtime.py  utils.py
(+131 files in other folders)
