[project]
name = "multi-agent-runtime"
version = "0.1.0"
description = "Persistent multi-agent runtime with OpenAI-compatible gateway."
readme = "README.md"
authors = [{ name = "Multi-Agent Team" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.1",
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.19",
    "openai>=1.34.0",
    "httpx>=0.27.0",
    "tavily-python>=0.5.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
